# docs/swagger.yaml
@@ -1,35 +1,53 @@
 basePath: /api/v1/
 definitions:
-  auth.LoginRequest:
+  model.CollectionInfo:
+    properties:
+      goods_id:
+        type: integer
+    type: object
+  model.FeedbackInfo:
+    properties:
+      content:
+        type: string
+    type: object
+  model.GoodsInfo:
+    properties:
+      description:
+        type: string
+      image:
+        type: string
+      tag_ids:
+        type: string
+      time:
+        type: string
+    type: object
+  model.LoginRequest:
     properties:
       account:
         type: string
       password:
         type: string
     type: object
-  collection.CollectionInfo:
+  model.Response:
     properties:
-      collection_id:
+      code:
         type: integer
-      goods_id:
-        type: integer
+      data:
+        type: string
+      message:
+        type: string
     type: object
-  feedback.FeedbackInfo:
+  model.TagInfo:
     properties:
       content:
         type: string
     type: object
-  goods.GoodsInfo:
+  model.UserInfo:
     properties:
-      buyer_id:
+      image:
         type: string
-    type: object
-  tag.TagInfo:
-    properties:
-      content:
+      nickName:
         type: string
-      ownerId:
-        type: integer
     type: object
   user.UserInfo:
     properties:
@@ -38,7 +56,7 @@ definitions:
       nickname:
         type: string
     type: object
-host: 127.0.0.1
+host: 127.0.0.1:8080
 info:
   contact:
     email: 2313661940@qq.com
@@ -54,51 +72,31 @@ paths:
       - application/json
       description: 登录
       parameters:
-      - description: Account 账户 Password 密码
+      - description: Account 账户 Password 将密码进行base64编码后的字符串
         in: body
-        name: payload
+        name: req
         required: true
         schema:
-          $ref: '#/definitions/auth.LoginRequest'
+          $ref: '#/definitions/model.LoginRequest'
       produces:
       - application/json
       responses:
         "200":
-          description: login successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: not found
+          description: Unauthentication
+          schema:
+            $ref: '#/definitions/model.Response'
         "500":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 输入账号密码登录
       tags:
       - auth
   /collection:
-    delete:
-      consumes:
-      - application/json
-      description: 将收藏从数据库中删除
-      parameters:
-      - description: token
-        in: header
-        name: token
-        required: true
-        type: string
-      - description: CollectionInfo
-        in: body
-        name: info
-        required: true
-        schema:
-          $ref: '#/definitions/collection.CollectionInfo'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: ok,it has been deleted successfully
-        "400":
-          description: errors in server
-      summary: 删除收藏
-      tags:
-      - collection
     get:
       consumes:
       - application/json
@@ -113,9 +111,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been provided successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 获得收藏
       tags:
       - collection
@@ -129,20 +139,70 @@ paths:
         name: token
         required: true
         type: string
-      - description: CollectionInfo
+      - description: The id of the goods
         in: body
         name: info
         required: true
         schema:
-          $ref: '#/definitions/collection.CollectionInfo'
+          $ref: '#/definitions/model.CollectionInfo'
       produces:
       - application/json
       responses:
         "200":
-          description: ok,it has been added successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 添加收藏
+      tags:
+      - collection
+  /collection/:collection_id:
+    delete:
+      consumes:
+      - application/json
+      description: 将收藏从数据库中删除
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: 用户在搜索框内输入的搜索内容
+        in: path
+        name: collection_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
+        "400":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+      summary: 删除收藏
       tags:
       - collection
   /feedback:
@@ -161,14 +221,26 @@ paths:
         name: info
         required: true
         schema:
-          $ref: '#/definitions/feedback.FeedbackInfo'
+          $ref: '#/definitions/model.FeedbackInfo'
       produces:
       - application/json
       responses:
         "200":
-          description: ok,it has been added successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 添加反馈
       tags:
       - feedback
@@ -188,14 +260,26 @@ paths:
         name: info
         required: true
         schema:
-          $ref: '#/definitions/goods.GoodsInfo'
+          $ref: '#/definitions/model.GoodsInfo'
       produces:
       - application/json
       responses:
         "200":
-          description: ok,it has been added successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 发布商品
       tags:
       - goods
@@ -214,9 +298,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been provided successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 获取信息
       tags:
       - goods
@@ -240,9 +336,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been searched and provided successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 搜索商品
       tags:
       - goods
@@ -287,7 +395,7 @@ paths:
         name: info
         required: true
         schema:
-          $ref: '#/definitions/goods.GoodsInfo'
+          $ref: '#/definitions/model.GoodsInfo'
       - description: 商品ID
         in: path
         name: goods_id
@@ -297,9 +405,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been updated successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 更新信息
       tags:
       - goods
@@ -318,9 +438,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been provided successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 获得标签
       tags:
       - tag
@@ -339,14 +471,26 @@ paths:
         name: info
         required: true
         schema:
-          $ref: '#/definitions/tag.TagInfo'
+          $ref: '#/definitions/model.TagInfo'
       produces:
       - application/json
       responses:
         "200":
-          description: ok,it has been added successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 添加标签
       tags:
       - tag
@@ -370,9 +514,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been deleted successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 删除标签
       tags:
       - tag
@@ -391,9 +547,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been provided successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 获得用户信息
       tags:
       - user
@@ -413,14 +581,26 @@ paths:
         name: info
         required: true
         schema:
-          $ref: '#/definitions/user.UserInfo'
+          $ref: '#/definitions/model.UserInfo'
       produces:
       - application/json
       responses:
         "200":
-          description: ok,it has been updated successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 更新信息
       tags:
       - user
@@ -445,9 +625,21 @@ paths:
       - application/json
       responses:
         "200":
-          description: ok,it has been updated successfully
+          description: successful
+          schema:
+            $ref: '#/definitions/model.Response'
         "400":
-          description: errors in server
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
+        "401":
+          description: Errors in authentication by token
+          schema:
+            $ref: '#/definitions/model.Response'
+        "500":
+          description: errors!
+          schema:
+            $ref: '#/definitions/model.Response'
       summary: 更新信息
       tags:
       - user
